# cookidoo-telegram-bot

./: .gitignore  README.md  config.example.toml  pyproject.toml
languages/: en.toml  es.toml
src/cookidoo_bot/: __init__.py  ai_service.py  bot.py  config.py  cookidoo_client.py  i18n.py  models.py  recipe_service.py
src/cookidoo_bot/handlers/: __init__.py  create.py  help.py  language.py
